--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue2-filters": "^0.14.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
