--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "uplot": "^1.6.19",
+    "uplot-vue": "^1.1.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
