--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "sass": "^1.49.8",
-    "sass-loader": "10"
+    "sass-loader": "10",
+    "vue-svg-loader": "^0.16.0"
   }
 }
