--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@xchainjs/xchain-util": "^0.6.0",
+    "bignumber.js": "^9.0.2",
     "core-js": "^3.19.3",
+    "ethers": "^5.5.4",
     "nuxt": "^2.15.8",
     "uplot": "^1.6.19",
     "uplot-vue": "^1.1.1",
