--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.19.3",
     "ethers": "^5.5.4",
     "nuxt": "^2.15.8",
+    "qrcode.vue": "1.7.0",
     "uplot": "^1.6.19",
     "uplot-vue": "^1.1.1",
     "vue": "^2.6.14",
