--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@babel/eslint-parser": "^7.16.3",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/svg": "^0.4.0",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "sass": "^1.49.8",
-    "sass-loader": "10",
-    "vue-svg-loader": "^0.16.0"
+    "sass-loader": "10"
   }
 }
